# crispy-bootloader-rp2040-rs

./: .gitignore  .markdownlint-cli2.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md
.cargo/: config.toml
.forgejo/actions/hil-provision/: action.yml
.forgejo/workflows/: hil-smoke.yml  hil-test.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  sbom.yml  security-scan.yml
crispy-bootloader/: Cargo.toml  build.rs
crispy-bootloader/src/: boot.rs  boot_fsm.rs  crypto.rs  flash.rs  main.rs  peripherals.rs  update.rs  usb_transport.rs
crispy-bootloader/src/services/: led.rs  mod.rs  trigger.rs  update.rs  usb.rs
crispy-bootloader/src/update/: commands.rs  state.rs  storage.rs
crispy-common/: Cargo.toml
crispy-common-python/: pyproject.toml
crispy-common-python/crispy_protocol/: __init__.py  protocol.py  transport.py
crispy-common-python/tests/: test_crc32.py  test_protocol.py  test_transport.py
crispy-common-rs/: Cargo.toml
crispy-common-rs/src/: crypto.rs  flash.rs  lib.rs  protocol.rs
crispy-common-rs/tests/: boot_data_tests.rs  crypto_tests.rs  protocol_tests.rs
crispy-common/src/: boot_fsm.rs  lib.rs  service.rs
crispy-common/tests/: boot_fsm_tests.rs  protocol_tests.rs
crispy-fw-sample/: Cargo.toml
crispy-fw-sample-cpp/: CMakeLists.txt  main.cpp
crispy-fw-sample-rs/: Cargo.toml  build.rs
crispy-fw-sample-rs/src/: main.rs
crispy-fw-sample-rs/tests/: build_tests.rs
crispy-fw-sample/.cargo/: config.toml
crispy-fw-sample/src/: main.rs
crispy-sdk-cpp/: CMakeLists.txt  README.md
crispy-sdk-cpp/include/crispy/: boot_data.h  protocol.h
crispy-sdk-cpp/src/: boot_data.cpp  commands.cpp
crispy-upload/: Cargo.toml
crispy-upload-python/: crispy_upload.py  pyproject.toml
crispy-upload-rs/: Cargo.toml  build.rs
crispy-upload-rs/src/: cli.rs  commands.rs  main.rs
crispy-upload/src/: cli.rs  commands.rs
cyber-training/: README.md  gabarit-scenario.md  methode-trace.md
docs/: ARCHITECTURE.md  DEVELOPMENT_METHODOLOGY.md  boot-bank-selection.md  boot-fsm.md  index.md  troubleshooting.md
docs/explanation/: ai-assisted-development.md  architecture-decisions.md  architecture.md  boot-bank-selection.md  development-methodology.md  rp2350-port-and-signature-analysis.md
docs/explanation/adr/: ADR-0001-dual-bank-update-model.md  ADR-0002-ram-buffered-upload.md  ADR-0003-cooperative-services-and-events.md
docs/how-to/: hardware-test-setup.md  recover-device.md  run-integration-tests.md  sign-firmware.md  upload-firmware.md
docs/reference/: boot-data.md  cli-crispy-upload.md  memory-map.md  protocol.md
docs/tutorials/: first-bootloader-flash.md
keys/: README.md
linker_scripts/: bootloader_rp2040.x  fw_rp2040.x
scripts/: bin2uf2.py  build-combined.sh  flash.sh  test-integration.sh
scripts/ci/: prepare-release-assets.sh  sync-cargo-version-from-tag.sh  test-prepare-release-assets.sh
scripts/python/: README.md  pyproject.toml
scripts/python/crispy_protocol/: protocol.py
scripts/python/tests/: conftest.py  test_crc32.py  test_deployment.py  test_integration.py  test_transport.py
tests/integration/: REFACTORING_PLAN.md  conftest.py  pyproject.toml
tests/integration/boot/: __init__.py  conftest.py  hardware.py
tests/integration/boot/bootsequence/: __init__.py  conftest.py  test_bootsequence.py
tests/integration/boot/deployment/: __init__.py  test_deployment.py
tests/integration/boot/version/: test_version.py
tests/integration/crispy_board/: __init__.py  cargo.py  constants.py  discovery.py  flash.py  probe.py  protocol.py  serial.py
