[workspace]
members = ["crispy-fw-sample-rs", "crispy-bootloader", "crispy-common-rs", "crispy-upload-rs"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["ADNT Sàrl <info@adnt.io>"]
repository = "https://github.com/ADNTIO/example-minimal-bootloader-rp2040-rs"

[profile.release]
opt-level = 2
lto = false

[profile.dev]
opt-level = 1
