[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crispy-common-python"
version = "0.2.0"
description = "Python client library for the Crispy RP2040 bootloader protocol"
requires-python = ">=3.12"
dependencies = [
    "pyserial>=3.5",
]

[tool.hatch.build.targets.wheel]
packages = ["crispy_protocol"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
