[package]
name = "crispy-common-rs"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared protocol and flash utilities for the Crispy RP2040 A/B bootloader"
readme = "../README.md"
keywords = ["bootloader", "rp2040", "raspberry-pi-pico", "embedded", "firmware"]
categories = ["embedded", "no-std", "hardware-support"]

[lib]
name = "crispy_common"

[features]
default = []
std = ["serde/std"]
embedded = ["rp2040-hal", "embedded-hal", "cortex-m"]
defmt = ["dep:defmt"]
# Ed25519 firmware signing (host) and verification (device).
crypto = ["dep:ed25519-dalek"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
heapless = { version = "0.8", features = ["serde"] }

# Ed25519 signature support (no_std on device, signing helpers under `std`).
ed25519-dalek = { version = "2", default-features = false, optional = true }

# Optional embedded dependencies
rp2040-hal = { version = "0.11", features = ["rt", "critical-section-impl"], optional = true }
embedded-hal = { version = "1.0.0", optional = true }
cortex-m = { version = "0.7", optional = true }
defmt = { version = "1", optional = true }
