[package]
name = "crispy-fw-sample-rs"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Sample Rust firmware for the Crispy RP2040 A/B bootloader"
readme = "../README.md"
keywords = ["bootloader", "rp2040", "raspberry-pi-pico", "firmware", "embedded"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
crispy-common = { package = "crispy-common-rs", version = "0.0.0", path = "../crispy-common-rs", features = ["embedded"] }
rp2040-hal = { version = "0.11", features = ["rt", "critical-section-impl"] }
cortex-m = "0.7"
cortex-m-rt = "0.7"
usb-device = "0.3"
usbd-serial = "0.2"
embedded-hal = "1.0.0"
panic-probe = { version = "1", features = ["print-defmt"] }
defmt = "1"
defmt-rtt = "1"
