[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crispy-upload-python"
dynamic = ["version"]
description = "Firmware upload CLI for the Crispy RP2040 bootloader"
requires-python = ">=3.12"
dependencies = [
    "crispy-common-python",
    "pyserial>=3.5",
]

[tool.hatch.version]
path = "../VERSION"
pattern = "(?P<version>.+)"

[tool.uv.sources]
crispy-common-python = { path = "../crispy-common-python" }

[project.scripts]
crispy-upload = "crispy_upload:main"
