[package]
name = "crispy-upload-rs"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Firmware upload tool for crispy-bootloader via USB CDC"
readme = "../README.md"
keywords = ["bootloader", "rp2040", "firmware", "upload", "usb"]
categories = ["command-line-utilities", "development-tools", "embedded"]

[[bin]]
name = "crispy-upload"
path = "src/main.rs"

[dependencies]
crispy-common = { package = "crispy-common-rs", version = "0.2.0", path = "../crispy-common-rs", features = ["std"] }
serialport = "4"
postcard = { version = "1", features = ["use-std"] }
clap = { version = "4", features = ["derive"] }
crc = "3"
indicatif = "0.17"
anyhow = "1"
