[project]
name = "crispy-bootloader-tests"
version = "0.2.0"
description = "Integration and deployment tests for Crispy RP2040 bootloader"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0",
    "pyserial>=3.5",
    "pytest-cov>=4.0",
    "pytest-html>=4.0",
    "pytest-metadata>=3.0",
]

[tool.uv]
dev-dependencies = []

[tool.pytest.ini_options]
markers = [
    "integration: tests requiring RP2040 hardware via SWD/USB",
    "deployment: end-to-end deployment workflow tests on hardware",
]
